--- a/Desktop/ToDoApp/index.html
+++ b/Desktop/ToDoApp/index.html
@@ -12,8 +12,8 @@
         <h1 id="to-do">WHAT I NEED TO DO</h1>
       </div>
       <form class="container-2">
-        <input type="text" id="new-task" />
-        <button id="addTask-btn">ADD</button>
+        <input type="text" id="new-todo" />
+        <button id="addTodo-btn">ADD</button>
       </form>
       <div class="container-3">
         <ul class="list"></ul>
